--- a/public/css/project.css
+++ b/public/css/project.css
@@ -139,5 +139,14 @@
   border-radius: 2px;
   /* margin-bottom: 5px; */
   margin-right: 5px;
-  /* cursor: pointer; */
+}
+.tags-list .clear{
+  padding:2px  5px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  border: none;
+  cursor: pointer;
+
 }
