--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -14,7 +14,7 @@
   <%- include('../partials/navbar.ejs') %>
   <!-- breadcrumbs -->
   <section class="breadcrumbs">
-    <span>home</span>
+    <span><a href="/">home</a></span>
     <span class="separator active">/</span>
     <span class="active">Project</span>
   </section>
