--- a/public/css/project.css
+++ b/public/css/project.css
@@ -1,14 +1,16 @@
+
 .project {
-  margin: 20px 5vw;
+  margin: 20px 5vw 30px 5vw;
   border: 1px solid gray;
-  padding: 10px;
-}
-.project  {
+  padding: 20px;
+  border-radius: 5px;
+  background: #181970;
+  color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-transform: capitalize;
-  margin-bottom: 30px;
+  
 }
 
 .project .label {
@@ -16,7 +18,6 @@
   margin-bottom: 5px;
   text-decoration: underline;
   font-size: 1.3rem;
-
 }
 .project .value {
   font-size: 1.2rem;
@@ -24,16 +25,15 @@
 
 /* issue create header */
 .issue {
+  background-color: #36454f;
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #c0c0c0;
-  border-radius: 3px;
-  padding: 10px;
+  border-radius: 5px;
+  padding: 10px 20px;
   margin: 0 5vw 1rem 5vw;
-
 }
-
 
 .issue a {
   background-color: #d3d3d3;
@@ -43,58 +43,58 @@
   border: none;
   padding: 5px;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 /* issue filter */
 .issue-filter {
-  background-color: #c0c0c0;
+  background-color: #36454f;
+  color: #fff;
   padding: 10px;
   border-radius: 3px;
   margin: 0 5vw;
 }
-.issue-filter h2{
-    margin: 10px 0;
-    padding-bottom:5px;
-    border-bottom: 1px solid white;
+.issue-filter h2 {
+  margin: 10px 0;
+  padding-bottom: 5px;
+  border-bottom: 1px solid white;
 }
-.filter-wrapper{
-    margin: 1rem 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    row-gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-
+.filter-wrapper {
+  margin: 1rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  row-gap: 20px;
+  justify-content: space-between;
+  align-items: center;
 }
-.filter-wrapper .flex-item{
+.filter-wrapper .flex-item {
   flex-grow: 1;
 }
-.filter-wrapper .label{
-    margin-bottom: 5px;
-    font-size: 1.3rem;
+.filter-wrapper .label {
+  margin-bottom: 5px;
+  font-size: 1.3rem;
 }
-.filter-wrapper .value{
+.filter-wrapper .value {
   width: 100%;
 }
-.filter-wrapper input{
-    outline: none;
-    border: none;
-    background-color: #e3e3e3;
-    padding: 5px;
-    font-size: 1.2rem;
-    border-radius: 2px;
-    width: 100%;
-    max-width: 250px;
+.filter-wrapper input {
+  outline: none;
+  border: none;
+  background-color: #e3e3e3;
+  padding: 5px;
+  font-size: 1.2rem;
+  border-radius: 2px;
+  width: 100%;
+  max-width: 250px;
 }
-
 
 /* issue display */
-.issue-display{
+.issue-display {
   margin: 1rem 5vw 1rem 5vw;
 }
-.issue-display .issue-wrapper{
-  background-color: #c0c0c0;
+.issue-display .issue-wrapper {
+  background-color: #fd5c63;
   border-radius: 5px;
   padding: 10px;
   display: flex;
@@ -102,51 +102,49 @@
   flex-wrap: wrap;
   gap: 5px;
   margin-bottom: 5px;
-
 }
-.issue-display .issue-wrapper .flex-item{
+.issue-display .issue-wrapper .flex-item {
   background-color: #e3e3e3;
   padding: 5px;
   flex-grow: 1;
   text-transform: capitalize;
   font-size: 1.2rem;
-  
+  border-radius: 5px;
 }
-.issue-display .issue-wrapper .flex-item.labels{
+.issue-display .issue-wrapper .flex-item.labels {
   background-color: inherit;
 }
-.issue-display .issue-wrapper .title{
+.issue-display .issue-wrapper .title {
   font-weight: 900;
 }
-.issue-display .issue-wrapper .issue-label{
-  background-color: red;
+.issue-display .issue-wrapper .issue-label {
+  background-color: #6082b6;
   border-radius: 20px;
-  color:white;
-  padding :5px 15px;
+  color: white;
+  padding: 5px 15px;
   font-weight: 900;
   font-size: 0.8rem;
 }
 
-
 /* labels */
 .tags-list {
-  /* border: 1px solid red; */
   margin-bottom: 5px;
 }
 .tags-list .tag {
-  border: 1px solid white;
+  background-color: #6082b6;
+  color: #fff;
+  font-weight: 900;
   padding: 2px 5px;
   border-radius: 2px;
-  /* margin-bottom: 5px; */
   margin-right: 5px;
 }
-.tags-list .clear{
-  padding:2px  5px;
+.tags-list .clear {
+  font-weight: 900;
+  padding: 2px 5px;
   background-color: red;
   color: white;
   border-radius: 5px;
   font-size: 0.8rem;
   border: none;
   cursor: pointer;
-
 }
